--- a/hima/experiments/temporal_pooling/configs/stm.yaml
+++ b/hima/experiments/temporal_pooling/configs/stm.yaml
@@ -1,4 +1,4 @@
-_type_: stp_experiment.tm_sequence_learning
+_type_: stp_experiment.stm
 project: stp.new_tm.test_text
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
