--- a/hima/experiments/successor_representations/configs/runner/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/runner/gridworld.yaml
@@ -1,7 +1,7 @@
 log: True
 visualize: False
-project_name: gridworld_pomdp_final
-run_tag: test1
+project_name: gridworld_sampling_test
+run_tag: cell_sampling
 
 action_inertia: 1
 frame_skip: 0
@@ -20,11 +20,11 @@ strategies: null
 #  - [ 2, 0, 2, 0, 2, 0, 2, 3, 0, 3, 0, 2 ]
 #  - [ 0, 2, 3, 3, 2, 3, 0, 0, 0, 2, 0, 1 ]
 observe_actions: True
-reward_free: False
+reward_free: True
 
-setup: blocked
+setup: free2
 
-scenario: 'configs/scenario/gridworld_pomdp_chenv_fchmm.yaml'
+scenario: 'configs/scenario/gridworld_pomdp_chenv_dhtm.yaml'
 env_conf: 'configs/environment/gridworld/pomdp.yaml'
 agent_conf: 'configs/agent/bio/gridworld_pomdp.yaml'
 metrics_conf: 'configs/metrics/bio/gridworld_pomdp.yaml'
