--- a/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
@@ -12,15 +12,15 @@
   params: {}
 
 # ---- changing environment ----
-- condition: ['episodes', 'equal', 0, 'norepeat']
-  check_every: 'episodes'
-  action: change_setup
-  params:
-    setup: free
-    setup_id: 0
-- condition: ['episodes', 'equal', 300, 'norepeat']
-  check_every: 'episodes'
-  action: change_setup
-  params:
-    setup: blocked
-    setup_id: 1
+#- condition: ['episodes', 'equal', 0, 'norepeat']
+#  check_every: 'episodes'
+#  action: change_setup
+#  params:
+#    setup: free
+#    setup_id: 0
+#- condition: ['episodes', 'equal', 300, 'norepeat']
+#  check_every: 'episodes'
+#  action: change_setup
+#  params:
+#    setup: blocked
+#    setup_id: 1
