sr experiment: update configs

--- a/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
@@ -24,3 +24,9 @@
 #  params:
 #    setup: blocked
 #    setup_id: 1
+
+#- condition: ['episodes', '>', 0, 'repeat']
+#  check_every: 'episodes'
+#  action: save_buffer
+#  params:
+#    path: 'logs/messages'
