--- a/hima/experiments/successor_representations/configs/runner/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/runner/gridworld.yaml
@@ -1,7 +1,7 @@
 log: True
 visualize: False
-project_name: gridworld_sampling_test
-run_tag: cell_sampling
+project_name: gridworld_dhtm_agent_test
+run_tag: test1
 
 action_inertia: 1
 frame_skip: 0
@@ -20,9 +20,9 @@ strategies: null
 #  - [ 2, 0, 2, 0, 2, 0, 2, 3, 0, 3, 0, 2 ]
 #  - [ 0, 2, 3, 3, 2, 3, 0, 0, 0, 2, 0, 1 ]
 observe_actions: True
-reward_free: True
+reward_free: False
 
-setup: free2
+setup: blocked
 
 scenario: 'configs/scenario/gridworld_pomdp_chenv_dhtm.yaml'
 env_conf: 'configs/environment/gridworld/pomdp.yaml'
