update sr experiments

--- a/hima/experiments/successor_representations/configs/runner/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/runner/animalai.yaml
@@ -1,6 +1,6 @@
-log: True
+log: true
 visualize: False
-project_name: animalai_test
+project_name: animalai_test_vae
 run_tag: null
 
 action_inertia: 1
