--- a/hima/experiments/temporal_pooling/configs/se.yaml
+++ b/hima/experiments/temporal_pooling/configs/se.yaml
@@ -3,38 +3,44 @@ project: stp.se_mnist_tmp
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
-#output_sds: [2000, 40]
-output_sds: [2000, 25]
-#output_sds: [1000, 16]
-#output_sds: [400, 10]
-#output_sds: [125, 2]
 setup: setups.binary_basic_sp
 
 train:
-  n_epochs: 4
+  n_epochs: 3
   batch_size: 64
   n_online_epochs: 3
 test:
   eval_first: 3
   eval_schedule: 5
-  n_epochs: 10
+  n_epochs: 3
 
 classifier:
-  feedforward_sds: ???
-  n_classes: ???
-  learning_rate: 0.0003
+  classification: ???
+  layers: ???
+#  learning_rate: 0.0003
+  learning_rate: 0.001
   collect_losses: 1
 
 sp:
+  soft_hebb:
+    _type_: sp.soft_hebb
+    seed: ???
+    feedforward_sds: ???
+    output_sds: ???
+    learning_rate: 0.05
+    init_radius: 10.0
+    beta: 200.0
+    threshold: 0.002
+
   htm_sp:
     _type_: sp.htm
     seed: ???
     feedforward_sds: ???
     output_sds: ???
 #    potential_synapses_ratio: 0.05
-#    potential_synapses_ratio: 0.1
+    potential_synapses_ratio: 0.1
 #    potential_synapses_ratio: 0.25
-    potential_synapses_ratio: 1.0
+#    potential_synapses_ratio: 1.0
     synapse_permanence_deltas: [0.14, 0.02]
     connected_permanence_threshold: 0.5
     boost_strength: 7.0
@@ -95,14 +101,16 @@ sp:
     # input
 #    target_rf_to_input_ratio: 0.3
     target_rf_to_input_ratio: 0.5
+#    target_rf_to_input_ratio: 0.7
 #    target_rf_to_input_ratio: 2.0
 
-    target_max_rf_sparsity: 0.4
+    target_max_rf_sparsity: 0.1
     initial_max_rf_sparsity: 0.6
     initial_rf_to_input_ratio: 8.0
     # learning
     learning_rate: 0.01
-    newborn_pruning_cycle: 50.0
+#    newborn_pruning_cycle: 50.0
+    newborn_pruning_cycle: 20.0
     newborn_pruning_stages: 20
     newborn_pruning_mode: powerlaw
     prune_grow_cycle: 1000.0
@@ -110,26 +118,38 @@ sp:
     boosting_k: 7.0
 
 setups:
+  rate_ann:
+    input_mode: rate
+#    encoding_sds: [2000, 1]
+    encoding_sds: [125, 1]
+  rate_soft_hebb:
+    encoder: sp.soft_hebb
+    input_mode: rate
+#    encoding_sds: [2000, 10]
+    encoding_sds: [400, 6]
+#    encoding_sds: [125, 1]
   binary_htm_sp:
     encoder: sp.htm_sp
     input_mode: binary
-  binary_basic_sp:
-    encoder: sp.basic_sp
-    input_mode: binary
-  binary_ann:
-    input_mode: binary
-  rate_ann:
+    encoding_sds: [2000, 40]
+#    encoding_sds: [400, 6]
+  rate_sng_sp:
+    encoder:
+      _base_: sp.float_sp
+      output_mode: rate
+    encoding_sds: [2000, 25]
+#    encoding_sds: [400, 6]
     input_mode: rate
   binary_sng_sp:
     encoder:
       _base_: sp.float_sp
       output_mode: rate
     input_mode: binary
-  rate_sng_sp:
-    encoder:
-      _base_: sp.float_sp
-      output_mode: rate
-    input_mode: rate
+  binary_basic_sp:
+    encoder: sp.basic_sp
+    input_mode: binary
+
+data: mnist
 
 sdr_tracker:
   _type_: tracker.sdr
