sr experiment: update configs

--- a/hima/experiments/successor_representations/configs/environment/gridworld/pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/environment/gridworld/pomdp.yaml
@@ -2,4 +2,5 @@ start_position: [4, 0]
 observation_radius: 0
 collision_hint: True
 collision_reward: -0.1
+random_floor_colors: true
 headless: true
