--- a/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_dhtm.yaml
@@ -18,7 +18,7 @@
   params:
     setup: free
     setup_id: 0
-- condition: ['episodes', 'equal', 500, 'norepeat']
+- condition: ['episodes', 'equal', 300, 'norepeat']
   check_every: 'episodes'
   action: change_setup
   params:
@@ -30,3 +30,28 @@
 #  action: save_buffer
 #  params:
 #    path: 'logs/messages'
+
+# ---- pretrain ----
+#- condition: ['episodes', 'equal', 0, 'norepeat']
+#  check_every: 'episodes'
+#  action: set_parameters
+#  params:
+#    agent.agent.cortical_column.layer.use_backward_messages: false
+#    agent.agent.cortical_column.layer.grow_backward_connections: true
+#
+#- condition: ['episodes', 'equal', 100, 'norepeat']
+#  check_every: 'episodes'
+#  action: set_parameters
+#  params:
+#    agent.agent.cortical_column.layer.use_backward_messages: true
+
+#- condition: ['episodes', 'equal', 0, 'repeat']
+#  check_every: 'episodes'
+#  action: switch_strategy
+#  params:
+#    strategy: random
+#- condition: ['episodes', 'equal', 100, 'repeat']
+#  check_every: 'episodes'
+#  action: switch_strategy
+#  params:
+#    strategy: non-random
