add extension to KrotovHopfield model

--- a/hima/experiments/temporal_pooling/configs/se.yaml
+++ b/hima/experiments/temporal_pooling/configs/se.yaml
@@ -18,9 +18,10 @@ test:
 classifier:
   classification: ???
   layers: ???
-  learning_rate: 0.0003
-#  learning_rate: 0.001
+#  learning_rate: 0.0003
+  learning_rate: 0.003
   collect_losses: 1
+  symexp_logits: ???
 
 sp:
   soft_hebb:
@@ -38,21 +39,33 @@ sp:
     seed: ???
     feedforward_sds: ???
     output_sds: ???
-    learning_rate: 0.05
     init_radius: 20.0
+    learning_rate: 0.02
+    beta_lr: 0.005
     min_active_mass: 0.75
     min_mass: 0.92
-    beta_lr: 0.005
 
   krotov:
     _type_: sp.krotov
     seed: ???
     feedforward_sds: ???
     output_sds: ???
-    learning_rate: 0.002
+    init_radius: 10.0
+    learning_rate: 0.02
     lebesgue_p: 3
     neg_hebb_delta: 0.4
-    init_radius: 20.0
+    repu_n: 4.5
+
+  krotov_ext:
+    _type_: sp.krotov_ext
+    seed: ???
+    feedforward_sds: ???
+    output_sds: ???
+    init_radius: 10.0
+    learning_rate: 0.01
+    lebesgue_p: 3
+    neg_hebb_delta: 0.4
+    repu_n: 4.5
 
   htm_sp:
     _type_: sp.htm
@@ -138,22 +151,29 @@ setups:
   rate_soft_hebb:
     encoder: sp.soft_hebb
     input_mode: rate
+    classifier_symexp_logits: True
     encoding_sds: [2000, 10]
 #    encoding_sds: [400, 6]
-#    encoding_sds: [125, 1]
   rate_soft_hebb_ext:
     encoder: sp.soft_hebb_ext
     input_mode: rate
+    classifier_symexp_logits: True
     encoding_sds: [2000, 20]
 #    encoding_sds: [400, 4]
-#    encoding_sds: [125, 1]
   rate_krotov:
     encoder: sp.krotov
     sdr_tracker: False
     input_mode: rate
+    classifier_symexp_logits: True
     encoding_sds: [2000, 7]
 #    encoding_sds: [400, 2]
-#    encoding_sds: [125, 1]
+  rate_krotov_ext:
+    encoder: sp.krotov_ext
+    sdr_tracker: False
+    input_mode: rate
+    classifier_symexp_logits: True
+    encoding_sds: [2000, 4]
+#    encoding_sds: [400, 2]
   binary_htm_sp:
     encoder: sp.htm_sp
     input_mode: binary
@@ -163,9 +183,10 @@ setups:
     encoder:
       _base_: sp.float_sp
       output_mode: rate
+    input_mode: rate
+    classifier_symexp_logits: True
     encoding_sds: [2000, 25]
 #    encoding_sds: [400, 6]
-    input_mode: rate
   binary_sng_sp:
     encoder:
       _base_: sp.float_sp
