--- a/hima/experiments/temporal_pooling/configs/se.yaml
+++ b/hima/experiments/temporal_pooling/configs/se.yaml
@@ -98,7 +98,7 @@ sp:
     learning_set: all
     neg_hebb_delta: 0.4
     pruning:
-      n_stages: 10
+      n_stages: 20
       cycle: 100.0
       mode: linear
       target_rf_sparsity: 0.25
@@ -144,18 +144,17 @@ sp:
   _common_base:
     _base_: $_base.spatial_pooler.default
     # input
-#    target_rf_to_input_ratio: 0.3
-    target_rf_to_input_ratio: 0.5
+    target_rf_to_input_ratio: 0.3
+#    target_rf_to_input_ratio: 0.5
 #    target_rf_to_input_ratio: 0.7
 #    target_rf_to_input_ratio: 2.0
 
-    target_max_rf_sparsity: 0.1
+    target_max_rf_sparsity: 0.05
     initial_max_rf_sparsity: 0.6
     initial_rf_to_input_ratio: 8.0
     # learning
     learning_rate: 0.01
     newborn_pruning_cycle: 50.0
-#    newborn_pruning_cycle: 20.0
     newborn_pruning_stages: 20
     newborn_pruning_mode: powerlaw
     prune_grow_cycle: 1000.0
@@ -165,21 +164,21 @@ sp:
 setups:
   rate_ann:
     input_mode: rate
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
 #    encoding_sds: [2000, 1]
 #    encoding_sds: [400, 1]
     encoding_sds: [125, 1]
   rate_soft_hebb:
     encoder: sp.soft_hebb
     input_mode: rate
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 10]
 #    encoding_sds: [400, 6]
   rate_soft_hebb_ext:
     encoder: sp.soft_hebb_ext
     input_mode: rate
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 20]
 #    encoding_sds: [400, 4]
@@ -187,15 +186,15 @@ setups:
     encoder: sp.krotov
     sdr_tracker: False
     input_mode: rate
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
     encoding_sds: [2000, 7]
 #    encoding_sds: [400, 2]
   rate_krotov_ext:
     encoder: sp.krotov_ext
     sdr_tracker: False
     input_mode: rate
-    classifier_symexp_logits: True
-    encoding_sds: [2000, 4]
+#    classifier_symexp_logits: True
+    encoding_sds: [2000, 7]
 #    encoding_sds: [400, 2]
   binary_htm_sp:
     encoder: sp.htm_sp
@@ -208,7 +207,7 @@ setups:
       output_mode: rate
     input_mode: rate
     ds_norm: l1
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
     encoding_sds: [2000, 25]
 #    encoding_sds: [400, 6]
   rate_sng_sp:
@@ -217,7 +216,7 @@ setups:
       output_mode: rate
     input_mode: rate
     ds_norm: l1
-    classifier_symexp_logits: True
+#    classifier_symexp_logits: True
     encoding_sds: [2000, 25]
 #    encoding_sds: [400, 4]
   binary_sng_sp:
