finalize experiment settings

--- a/hima/experiments/temporal_pooling/configs/se.yaml
+++ b/hima/experiments/temporal_pooling/configs/se.yaml
@@ -170,14 +170,14 @@ setups:
   rate_soft_hebb:
     encoder: sp.soft_hebb
     input_mode: rate
-    classifier_symexp_logits: True
+    # classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 10]
 #    encoding_sds: [400, 6]
   rate_soft_hebb_ext:
     encoder: sp.soft_hebb_ext
     input_mode: rate
-    classifier_symexp_logits: True
+    # classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 20]
 #    encoding_sds: [400, 4]
@@ -185,14 +185,14 @@ setups:
     encoder: sp.krotov
     sdr_tracker: False
     input_mode: rate
-    classifier_symexp_logits: True
+    # classifier_symexp_logits: True
     encoding_sds: [2000, 7]
 #    encoding_sds: [400, 2]
   rate_krotov_ext:
     encoder: sp.krotov_ext
     sdr_tracker: False
     input_mode: rate
-    classifier_symexp_logits: True
+    # classifier_symexp_logits: True
     encoding_sds: [2000, 7]
 #    encoding_sds: [400, 2]
   binary_htm_sp:
@@ -205,7 +205,7 @@ setups:
       _base_: sp.float_sp
       output_mode: rate
     input_mode: rate
-    classifier_symexp_logits: True
+    # classifier_symexp_logits: True
     encoding_sds: [2000, 25]
 #    encoding_sds: [400, 6]
   rate_sng_sp:
@@ -214,8 +214,8 @@ setups:
       output_mode: rate
     input_mode: rate
     ds_norm: l1
-    classifier_symexp_logits: True
-    encoding_sds: [2000, 20]
+    # classifier_symexp_logits: True
+    encoding_sds: [2000, 25]
 #    encoding_sds: [400, 4]
   binary_sng_sp:
     encoder:
